# virtual-counter

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  STM32F042Fx TSSOP20 Pinout.txt  appveyor.yml  config-stm32f303re.ioc  deploy_all.sh
MeasurementTool/: MeasurementTool.pro  main.cpp  measurementcontroller.cpp  measurementcontroller.h
common/: protocoldefs.h
doc/: manual.lyx
firmware/: .cproject  .mxproject  .project  CMakeLists.txt  NUCLEO-F042K6.xml  STM32F042x6.cmake  VirtualInstrument.ioc  openocd.cfg
firmware/Inc/: main.h  scpi_user_config.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
firmware/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usbd_cdc_if.c  usbd_desc.c
firmware/Src/virtualinstrument/: hw.h  hw_stm32f042.h  hw_stmcommon.c  instrument.c  instrument.h  protocol.c  protocol_ascii.c  protocol_binary.c  protocol_scpi.c  protocol_scpi.h
firmware/fw-stm32f042/: .cproject  .gitignore  .mxproject  .project  .travis.yml  CMakeLists.txt  NUCLEO-F042K6.xml  STM32F042x6.cmake  config-stm32f042.ioc  fw-stm32f042 Debug.cfg  fw-stm32f042.ioc
firmware/fw-stm32f042/Inc/: hw_stm32f042.h  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  usbd_conf.h
firmware/fw-stm32f042/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
firmware/fw-stm32f042/Src/virtualinstrument/: hw_stm32f042.c  hw_stmcommon.c  protocol_ascii.c  protocol_ascii.h
firmware/fw-stm32f303/: .cproject  .project  CMakeLists.txt  NUCLEO-F303RE.xml  STM32F303xE.cmake  fw-stm32f303 Debug.cfg  fw-stm32f303.ioc
firmware/fw-stm32f303/Inc/: hw_stm32f303.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
firmware/fw-stm32f303/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
firmware/stm32-shared/: hw_stm32f042.h  hw_stmcommon.c
firmware/virtual-instrument/: CMakeLists.txt
firmware/virtual-instrument/include/virtualinstrument/: hw.h  instrument.h  protocol.h  protocol_ascii.h
firmware/virtual-instrument/src/: instrument.c  protocol.c  protocol_ascii.c  protocol_binary.c  protocol_binary.h
gui/: F042F6.txt  F042K6_Nucleo32.txt  F303_Nucleo64.txt  MeasurementTool.pro  SignalGUI.pro  guicommon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurementcontroller.cpp  measurementcontroller.h  measurementplotview.cpp  measurementplotview.h  measurementtool.qrc  optionsdialog.h  optionsdialog.ui  pwmoutputplotcontroller.cpp  pwmoutputplotcontroller.h  pwmoutputplotview.cpp  pwmoutputplotview.h  serialsession.cpp  serialsession.h
gui/pinout-images/: makepinout.py
pyvirtualcounter/virtualcounter/: drawtable.py  instrument.py  test_instrument.py
